--- a/IASS.API/appsettings.json
+++ b/IASS.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Main": "Data Source=localhost;Initial Catalog=IASS;Integrated Security=True;"
+  },
+  "JWT": "ukhyuwjgdYGSDGTYA2712y78yuGTVty"
 }
