--- a/IASS.Frontend/angular.json
+++ b/IASS.Frontend/angular.json
@@ -34,7 +34,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "src/styles.scss",
+              "src/assets/scss/app.scss",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           },
@@ -109,6 +113,5 @@
         }
       }
     }
-  },
-  "defaultProject": "IASS.Frontend"
+  }
 }
