--- a/IASS.Frontend/package.json
+++ b/IASS.Frontend/package.json
@@ -6,11 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prepare": "cd .. && husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^14.1.2",
     "@angular/cdk": "^14.1.1",
     "@angular/common": "^14.1.2",
@@ -22,29 +25,33 @@
     "@angular/platform-browser": "^14.1.2",
     "@angular/platform-browser-dynamic": "^14.1.2",
     "@angular/router": "^14.1.2",
+    "@azure/msal-angular": "^2.5.2",
+    "@azure/msal-browser": "^2.32.2",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ng-select/ng-select": "^9.0.2",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "jwt-decode": "^3.1.2",
-    "ngx-skeleton-loader": "^6.0.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.7"
+    "zone.js": "~0.11.7",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "@angular-devkit/build-angular": "^14.2.0",
+    "@angular/cli": "^14.1.2",
+    "@angular/compiler-cli": "^14.1.2",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.7.1",
+    "husky": "^8.0.1",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1",
+    "typescript": "~4.7.4"
   }
 }
